--- a/index.html
+++ b/index.html
@@ -6,11 +6,14 @@
 </head>
 <body>
   <div class="timer">
-    <h1 id="timer">00:00:00</h1>
-    <button id="start">Start</button>
-    <button id="pause">Pause</button>
-    <button id="reset">Reset</button>
+    <span id="hours">00</span>:
+    <span id="minutes">00</span>:
+    <span id="seconds">00</span>.
+    <span id="milliseconds">000</span>
   </div>
+  <button id="start">Start</button>
+  <button id="pause">Pause</button>
+  <button id="reset">Reset</button>
 
   <script src="js.js"></script>
 </body>
